--- a/package.json
+++ b/package.json
@@ -35,10 +35,6 @@
     ]
   },
   "devDependencies": {
-    "single-spa-react": "^2.14.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-config-single-spa-react": "^1.5.0",
-    "webpack-merge": "^4.2.2"
+    "single-spa-react": "^2.14.0"
   }
 }
