--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
